Cambios Textos Factura , Sector Entrega
*se cambian la forma de ingresar los textos mediante un dialog con items
seleccionables y editables

*se cambia la forma de avisar en caso de que se con entrega donde el
cliente al seleccionar esa opcion mostrara automaticamente un dialog
donde ingresar el sector

--- a/MANCAL_WEB/MANCAL_WEB/css/Site.css
+++ b/MANCAL_WEB/MANCAL_WEB/css/Site.css
@@ -191,8 +191,8 @@ div.menu ul li a:active
 ----------------------------------------------------------*/
 
 fieldset
-{
-    margin: 1em 0px;
+{/*margin estaba en 1em 0px*/
+    margin: 1em 30px;
     padding: 1em;
     border: 1px solid #ccc;
 }
@@ -210,6 +210,12 @@ fieldset.login label, fieldset.register label, fieldset.changePassword label
 fieldset label.inline 
 {
     display: inline;
+}
+/*AGREGADO POR MI*/
+fieldset.inline
+{
+    display:inline;
+    padding:
 }
 
 legend 
