--- a/MANCAL_WEB/MANCAL_WEB/css/Site.css
+++ b/MANCAL_WEB/MANCAL_WEB/css/Site.css
@@ -492,3 +492,13 @@ overflow:auto;	/* Hide overflow content */
 z-index:1000001;
 
 }
+
+.error
+{
+    color:Red;
+}
+
+.ocultaCol
+{
+    display:none;
+}
