Cambios Rpt, Footer, Plazo Entrega, Dcto
* Se cambia la consulta del reporte, la cual agrupa un item en caso de
que sea igual mostrando solo uno.

* Se deja habilitado ambos campos de descuento (porcentaje, moneda)
dependiendo de cual se ingrese realizara el calculo correspondiente.

* Se deja el dialog para el ingreso y posterior calculo del plazo de
entrega en dias.

* Se modifica el header y el footer por norma en los desarrollos.

* Se modifica css y el master page para el footer.

--- a/MANCAL_WEB/MANCAL_WEB/MasterPage.Master
+++ b/MANCAL_WEB/MANCAL_WEB/MasterPage.Master
@@ -24,8 +24,12 @@
             <div class="title">
                 <table>
                     <tr>
-                        <td><asp:Image ID="Image1" runat="server" ImageUrl="~/img_files/LOGO DTS UN Man Cal.bmp" Width="240px"/></td>
-                        <td><h1 style="color:Black;"></h1></td>
+                        <td>                            
+                            SICO
+                        </td>
+                        <td>
+                            <h1 style="color:Black;"></h1>
+                        </td>
                     </tr>
                 </table> 
             </div>
@@ -42,10 +46,23 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server"/>
         </div>
         <div class="clear">
+            
         </div>
     </div>
     <div class="footer">
-        
+        <table style="width:100%;">
+            <tr>
+                <td style="width:33%;">
+                    
+                </td>
+                <td style="text-align:center; width:33%;">
+                    <label style="vertical-align:central; color:black; font-weight:bold; font-size:medium;">DTS® 2015</label>
+                </td>
+                <td style="width:33%;">
+                    <asp:Image ID="Image3" runat="server" ImageUrl="~/img_files/LOGO DTS UN Man Cal.bmp" Width="240px" />
+                </td>
+            </tr>
+        </table>
     </div>
     </form>
 </body>    
