--- a/MANCAL_WEB/MANCAL_WEB/MasterPage.Master
+++ b/MANCAL_WEB/MANCAL_WEB/MasterPage.Master
@@ -11,9 +11,13 @@
     <script type="text/javascript" src="../Scripts/jquery.validate.js"></script>    
     <script type="text/javascript" src="../Scripts/jquery.cookie.js"></script>
     <script type="text/javascript" src="../Scripts/jsEquipo.js"></script>
+    <script type="text/javascript" src="../Scripts/UseJQuery.js"></script>
+    <script type="text/javascript" src="../Scripts/jquery.soap.js"></script>
     <%--<script src="http://html5form.googlecode.com/svn/trunk/jquery.html5form-1.5-min.js"></script>--%>
     <link href="css/Site.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css" />    
+    <link runat="server" rel="shortcut icon" href="~/img_files/iconcotizador.ico" type="image/x-icon"/>
+    <link runat="server" rel="icon" href="~/img_files/iconcotizador.ico" type="image/ico"/>
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -25,10 +29,11 @@
                 <table>
                     <tr>
                         <td>                            
-                            SICO
+                            
                         </td>
                         <td>
                             <h1 style="color:Black;"></h1>
+                            <asp:Image ID="Image1" runat="server" ImageUrl="~/img_files/LOGO DTS UN Man Cal.bmp" Width="240px" />
                         </td>
                     </tr>
                 </table> 
